[gd_scene load_steps=3 format=3 uid="uid://cbsmnx7wbcdtm"]

[ext_resource type="Script" uid="uid://bri6rqmwwejt5" path="res://scripts/shop_menu.gd" id="1_5pe57"]
[ext_resource type="FontFile" uid="uid://bq5obgtgiy0su" path="res://assets/fonts/BoldPixels1.4.ttf" id="1_uj65v"]

[node name="ShopMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_5pe57")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0784314, 0.0784314, 0.0784314, 1)

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_uj65v")
text = "Shop"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MoneyLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = 29.0
offset_right = 20.0
offset_bottom = 52.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_uj65v")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ItemContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CloseButton" type="Button" parent="ItemContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("1_uj65v")
